fixed: jQuery UI z-index

--- a/hanfor/static/css/app.css
+++ b/hanfor/static/css/app.css
@@ -22,3 +22,8 @@
 .input-group div.awesomplete .form-control {
     border-radius: 0;
 }
+
+/* Fix jQuery UI */
+.ui-front {
+    z-index: 9999999 !important;
+}
